redis integration + custom user profile + refactor code