@@ -1,18 +1,25 @@
 package com.otaku.community.feature.manga.service;
 
 import com.otaku.community.common.dto.PageResponse;
-import com.otaku.community.feature.anime.integration.JikanIntegrationService;
+import com.otaku.community.feature.integration.jikan.JikanIntegrationService;
+import com.otaku.community.feature.integration.jikan.dto.JikanListResponse;
 import com.otaku.community.feature.manga.dto.MangaDto;
-import com.otaku.community.feature.manga.integration.dto.JikanMangaListResponse;
+import com.otaku.community.feature.manga.integration.dto.JikanMangaData;
 import com.otaku.community.feature.manga.integration.dto.JikanMangaSingleResponse;
 import com.otaku.community.feature.manga.mapper.MangaMapper;
+import com.otaku.community.feature.post.service.PostService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ * Service for handling manga-related operations.
+ * This service fetches data from the Jikan API and maps it to DTOs.
+ * It also includes caching to improve performance.
+ */
 @Service
 @Slf4j
 @RequiredArgsConstructor
@@ -20,20 +27,45 @@ public class MangaService {
 
     private final JikanIntegrationService jikanIntegrationService;
     private final MangaMapper mangaMapper;
-    private final com.otaku.community.feature.post.service.PostService postService;
+    private final PostService postService;
 
+    /**
+     * Searches for manga based on a query and filters.
+     * The results are cached.
+     *
+     * @param query  The search query.
+     * @param type   The type of manga to search for.
+     * @param status The status of the manga.
+     * @param page   The page number of the search results.
+     * @return A paginated response of manga DTOs.
+     * @sampleCacheKey mangaSearch::one piece:manga:publishing:1
+     * @see Cacheable
+     */
+    @Cacheable(value = "mangaSearch", key = "#query + ':' + #type + ':' + #status + ':' + #page")
     public PageResponse<MangaDto> searchManga(String query, String type, String status, int page) {
         log.debug("Searching manga with query: {}, type: {}, status: {}, page: {}", query, type, status, page);
-        JikanMangaListResponse response = jikanIntegrationService.searchManga(query, type, status, page);
+        JikanListResponse<JikanMangaData> response = jikanIntegrationService.searchManga(query, type, status, page);
         return mapToPageResponse(response);
     }
 
+    /**
+     * Retrieves a single manga by its ID.
+     * The result is cached.
+     *
+     * @param id The ID of the manga.
+     * @return The manga DTO.
+     * @throws RuntimeException if the manga is not found.
+     * @sampleCacheKey mangaDetail::1
+     * @see Cacheable
+     */
+    @Cacheable(value = "mangaDetail", key = "#id")
     public MangaDto getMangaById(int id) {
         log.debug("Fetching manga details for id: {}", id);
         JikanMangaSingleResponse response = jikanIntegrationService.getMangaById(id);
         if (response.getData() == null) {
             throw new RuntimeException("Manga not found with id: " + id);
         }
+
         MangaDto mangaDto = mangaMapper.toDto(response.getData());
 
         // Fetch related posts
@@ -47,30 +79,33 @@ public class MangaService {
         return mangaDto;
     }
 
+    /**
+     * Retrieves the top-rated manga.
+     * The results are cached.
+     *
+     * @param page The page number of the results.
+     * @return A paginated response of top manga DTOs.
+     * @sampleCacheKey mangaTop::1
+     * @see Cacheable
+     */
+    @Cacheable(value = "mangaTop", key = "#page")
     public PageResponse<MangaDto> getTopManga(int page) {
         log.debug("Fetching top manga for page: {}", page);
-        JikanMangaListResponse response = jikanIntegrationService.getTopManga(page);
+        JikanListResponse<JikanMangaData> response = jikanIntegrationService.getTopManga(page);
         return mapToPageResponse(response);
     }
 
-    private PageResponse<MangaDto> mapToPageResponse(JikanMangaListResponse response) {
+    /**
+     * Maps a Jikan list response to a paginated response of manga DTOs.
+     *
+     * @param response The Jikan list response.
+     * @return A paginated response of manga DTOs.
+     */
+    private PageResponse<MangaDto> mapToPageResponse(JikanListResponse<JikanMangaData> response) {
         List<MangaDto> dtos = response.getData().stream()
                 .map(mangaMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
 
-        JikanMangaListResponse.JikanPagination pagination = response.getPagination();
-        int page = 1;
-        int limit = 20;
-        long total = 0;
-
-        if (pagination != null) {
-            page = pagination.getCurrentPage() != null ? pagination.getCurrentPage() : 1;
-            if (pagination.getItems() != null) {
-                limit = pagination.getItems().getPerPage() != null ? pagination.getItems().getPerPage() : 20;
-                total = pagination.getItems().getTotal() != null ? pagination.getItems().getTotal() : 0;
-            }
-        }
-
-        return PageResponse.of(dtos, page, limit, total);
+        return PageResponse.toPageResponseFromJikan(response, dtos);
     }
 }
